include_directories (Util)
add_subdirectory (Util)
include_directories (Log)
add_subdirectory (Log)
include_directories (MVC)
add_subdirectory (MVC)
include_directories (GLFW)
add_subdirectory (GLFW)
include_directories (Client/Game)
add_subdirectory (Client/Game)
include_directories (Client/Menu)
add_subdirectory (Client/Menu)
include_directories (Client)
add_subdirectory (Client)
include_directories (Server)
add_subdirectory (Server)
include_directories (Math)
add_subdirectory (Math)

file(GLOB ROOT_SOURCES "*.cpp")
add_executable(Chicago ${ROOT_SOURCES})

FIND_LIBRARY(X11_LIBRARY X11)
target_link_libraries(Chicago Util Log MVC GLFW ClientGame ClientMenu Client Server Math libHorde3D.so libHorde3DUtils.so libglfw.so ${X11_LIBRARY} GL)
